--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+
+
+/docs/build
+
+
+
+
+
+
+
+#########################################
+############   PYTHON       #############
+#########################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
